# honcho-python

./: .release-please-manifest.json  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
examples/cli/mirascope/: README.md  main.py  pyproject.toml
examples/discord/dspy-personas/: chain.py  graph.py  main.py  pyproject.toml  response_metric.py
examples/discord/dspy-personas/langchain_prompts/: state_check.yaml  state_commentary.yaml  state_labeling.yaml
examples/discord/fact-memory/: chain.py  main.py  pyproject.toml
examples/discord/fact-memory/prompts/core/: introspection.yaml  response.yaml
examples/discord/roast-bot/: .env.template  main.py  pyproject.toml
examples/discord/simple/: README.md  main.py  pyproject.toml  requirements.txt
scripts/: lint
scripts/utils/: upload-artifact.sh
src/honcho/: __init__.py  _base_client.py  _client.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
src/honcho/_utils/: _logs.py  _resources_proxy.py
src/honcho/lib/: __init__.py
src/honcho/lib/ext/: langchain.py
src/honcho/resources/: __init__.py  keys.py
src/honcho/resources/apps/: __init__.py  apps.py  name.py
src/honcho/resources/workspaces/: __init__.py  workspaces.py
src/honcho/types/: __init__.py  app.py  app_create_params.py  app_get_params.py  app_list_params.py  app_update_params.py  key_create_params.py  page_app.py  workspace.py  workspace_get_or_create_params.py  workspace_list_params.py  workspace_search_params.py  workspace_update_params.py
src/honcho/types/apps/: __init__.py  page_user.py  user.py  user_create_params.py  user_get_params.py  user_list_params.py  user_update_params.py
src/honcho/types/workspaces/: peer.py  peer_chat_response.py  peer_get_or_create_params.py  peer_list_params.py  peer_search_params.py  peer_update_params.py  session.py  session_clone_params.py  session_get_context_params.py  session_get_context_response.py  session_get_or_create_params.py  session_list_params.py  session_search_params.py  session_update_params.py
src/honcho_core/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _types.py  _version.py
src/honcho_core/_utils/: _logs.py  _resources_proxy.py
src/honcho_core/resources/: keys.py
src/honcho_core/resources/workspaces/: __init__.py  webhooks.py  workspaces.py
src/honcho_core/types/: __init__.py  deriver_status.py  workspace_deriver_status_params.py  workspace_list_params.py  workspace_search_params.py  workspace_search_response.py
src/honcho_core/types/workspaces/: __init__.py  page_peer.py  page_session.py  peer_chat_params.py  peer_list_params.py  peer_search_params.py  peer_search_response.py  peer_working_representation_params.py  peer_working_representation_response.py  session_get_context_params.py  session_get_context_response.py  session_get_or_create_params.py  session_list_params.py  session_search_params.py  session_search_response.py  webhook_endpoint.py  (+3 more)
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_apps.py  test_keys.py  test_workspaces.py
tests/api_resources/apps/: test_name.py  test_users.py
tests/api_resources/workspaces/: test_peers.py  test_sessions.py  test_webhooks.py
tests/test_utils/: test_proxy.py  test_typing.py
(+126 files in other folders)
