[tool.poetry]
name = "honcho-mirascope-demo"
version = "0.1.0"
description = "Simple CLI Chatbot with Honcho"
authors = ["Vineeth Voruganti <13438633+VVoruganti@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
mirascope = "^0.13.0"
honcho-ai = {path = "../../../dist/honcho_ai-0.0.8.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
