[tool.poetry]
name = "honcho-roast-bot"
version = "0.1.0"
description = ""
authors = ["Vineeth Voruganti <13438633+VVoruganti@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.5.0"
langchain-core = "^0.2.0"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
honcho-ai = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
